Examples require simple PSR-6 cache
- Add simple cache implementation to persist data between requests

--- a/examples/composer.json
+++ b/examples/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "slim/slim": "^3.0.0"
+        "slim/slim": "^3.0.0",
+        "cache/filesystem-adapter": "^1.0"
     },
     "require-dev": {
         "league/event": "^2.2",
